--- a/G92X_common.dtsi
+++ b/G92X_common.dtsi
@@ -456,12 +456,9 @@
 	};
 
 	hsi2c@14E00000 {
-		/delete-property/ pinctrl-names;
-		/delete-property/ pinctrl-0;
-		/delete-property/ gpio_sda;
-		/delete-property/ gpio_scl;
 		status = "okay";
-		sec-nfc@27 {
+		secure-mode; /* flag for secure gpio recover function */
+ 		sec-nfc@27 {
 			compatible = "sec-nfc";
 			reg = <0x27>;
 
@@ -501,6 +498,7 @@
 			pn547,irq-gpio = <&gpa0 6 0>;
 			pn547,clk_req-gpio = <&gpa2 6 0xf>;
 			pn547,pwr_req = <&gpf5 1 0>;
+			pn547,i2c_1p8 = "VDD20_1P8_AP";
 		};
 
 		max86900@51 {
@@ -821,8 +819,8 @@
 		/delete-property/ gpio_sda;
 		/delete-property/ gpio_scl;
 		status = "okay";
+		secure-mode; /* flag for secure gpio recover function */
 		touchscreen@20 {
-			compatible = "stm,fts_touch";
 			reg = <0x49>;
 			pinctrl-names = "on_state", "off_state";
 			pinctrl-0 = <&attn_irq>;
@@ -1131,7 +1129,7 @@
 
 		af {
 			product_name = <7>; /* AK7345 */
-			i2c_addr = <0x5A>;
+			i2c_addr = <0x18>;
 			i2c_ch = <2>; /* I2C 2 */
 		};
 
@@ -1176,7 +1174,7 @@
 
 		af {
 			product_name = <7>; /* AK7345 */
-			i2c_addr = <0x5A>;
+			i2c_addr = <0x18>;
 			i2c_ch = <2>; /* I2C 2 */
 		};
 
@@ -1344,6 +1342,8 @@
 			read_version = <0>;		/* 0 : SYSFS , 1 : CAMON */
 			core_voltage = <1>;		/* 0 : N , 1 : Y  */
 			upgrade = <1>;			/* 0 : N , 1 : SYSFS , 2 : CAMON */
+			fw_write = <2>;			/* 0 : N,  1 : OS, 2 : SD, 3 : ALL */
+			fw_dump = <0>;			/* 0 : N , 1 : Y  */
 			companion = <1>;		/* 0 : N , 1 : Y  */
 			ois = <1>;			/* 0 : N , 1 : Y  */
 		};
@@ -1353,6 +1353,8 @@
 			read_version = <0>;		/* 0 : SYSFS , 1 : CAMON */
 			core_voltage = <0>;		/* 0 : N , 1 : Y  */
 			upgrade = <0>;			/* 0 : N , 1 : SYSFS , 2 : CAMON */
+			fw_write = <0>;			/* 0 : N,  1 : OS, 2 : SD, 3 : ALL */
+			fw_dump = <0>;			/* 0 : N , 1 : Y  */
 			companion = <1>;		/* 0 : N , 1 : Y  */
 			ois = <0>;			/* 0 : N , 1 : Y  */
 		};
@@ -2126,7 +2128,7 @@
 
 			/* Time table */
 			input_booster,head_times = <130 130 0>;
-			input_booster,tail_times = <500 500 0>;
+			input_booster,tail_times = <0 500 0>;
 			input_booster,phase_times = <0 0 0>;
 		};
 		booster_key@4 { // Input Booster +
@@ -2137,15 +2139,15 @@
 
 			/* Frequency table */
 			/* for level	:	1_Head 2_Tail*/
-			input_booster,cpu_freqs = <1300000 0>;
+			input_booster,cpu_freqs = <1200000 0>;
 			input_booster,hmp_boost = <1 1>;
-			input_booster,kfc_freqs = <1200000 800000>;
+			input_booster,kfc_freqs = <800000 800000>;
 			input_booster,mif_freqs = <0 0>;
 			input_booster,int_freqs = <0 0>;
 
 			/* Time table */
-			input_booster,head_times = <1000 1000>;
-			input_booster,tail_times = <500 500>;
+			input_booster,head_times = <1000 0>;
+			input_booster,tail_times = <0 500>;
 			input_booster,phase_times = <0 0>;
 		};
 		booster_key@5 {
@@ -2182,8 +2184,8 @@
 			input_booster,int_freqs = <0 0>;
 
 			/* Time table */
-			input_booster,head_times = <130 130>;
-			input_booster,tail_times = <500 500>;
+			input_booster,head_times = <130 0>;
+			input_booster,tail_times = <0 500>;
 			input_booster,phase_times = <0 0>;
 		};
 		booster_key@7 {
@@ -2220,8 +2222,8 @@
 			input_booster,int_freqs = <0 0>;
 
 			/* Time table */
-			input_booster,head_times = <130 130>;
-			input_booster,tail_times = <500 500>;
+			input_booster,head_times = <130 0>;
+			input_booster,tail_times = <0 500>;
 			input_booster,phase_times = <0 0>;
 		};
 		booster_key@9 {
